cleanup readme's, starting package names, and fix singular test

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@avatar/root",
+  "name": "@starter/root",
   "private": true,
   "devDependencies": {
     "@craco/craco": "^7.0.0",
@@ -7,7 +7,7 @@
     "lerna": "^4.0.0"
   },
   "scripts": {
-    "start": "lerna exec --scope @avatar/app -- yarn start"
+    "start": "lerna exec --scope @starter/app -- yarn start"
   },
   "workspaces": {
     "packages": [
