--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@avatar/app",
+  "name": "@starter/app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@avatar/ui": "0.1.0",
+    "@starter/ui": "0.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
